[package]
name = "kfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[dependencies]
bitflags = "2.5.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
multiboot2 = { version = "0.22.2", default-features = false }
spin = "0.5.2"
volatile = "0.2.6"
