[package]
name = "kfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"

[lints.clippy]
# cargo = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
# nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
# restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }
