[package]
name = "kfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false
doctest = false
bench = false

[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"

[lints.rust]
# TODO

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# pedantic
cast_possible_truncation = "allow"

# restriction
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow" # TODO: remove once everything else is fixed
arithmetic_side_effects = "allow"
as_conversions = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
inline_asm_x86_intel_syntax = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
mod_module_files = "allow"
module_name_repetitions = "allow"
precedence_bits = "allow"
question_mark_used = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
shadow_same = "allow"
single_call_fn = "allow"
undocumented_unsafe_blocks = "allow"
unwrap_used = "allow"
wildcard_enum_match_arm = "allow"

# suspicious
blanket_clippy_restriction_lints = "allow"